<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sogiaodich"
            android:title="@string/nav_sogiaodich"
            android:icon="@drawable/ic_baseline_library_books_24"
            />
        <item
            android:id="@+id/nav_sono"
            android:title="@string/nav_sono"
            android:icon="@drawable/ic_baseline_book_24"
           />
        <item
            android:id="@+id/nav_thongke"
            android:title="@string/nav_thongke"
            android:icon="@drawable/ic_baseline_border_color_24"
            />
        <item
            android:id="@+id/nav_tietkiem"
            android:title="@string/nav_tietkiem"
            android:icon="@drawable/ic_baseline_monetization_on_24"
        />
    </group>
    <item
        android:title="@string/nav_taikhoan"
        >
        <menu>
            <item
                android:id="@+id/nav_thongtincanhan"
                android:title="@string/nav_thongtincanhan"
                android:icon="@drawable/ic_baseline_perm_identity_24"
                />
            <item
                android:id="@+id/nav_dangxuat"
                android:title="@string/nav_dangxuat"
                android:icon="@drawable/ic_baseline_power_settings_new_24"
                />
        </menu>
    </item>
</menu>